GNOME Bugzilla – Bug 616195
Does not compile with -DGSEAL_ENABLE
Last modified: 2010-06-06 16:52:26 UTC
This module does not build with -DGSEAL_ENABLE. See http://live.gnome.org/GnomeGoals/UseGseal . (Note that maybe this report cannot be fixed yet, as GTK+ still misses some accessor functions (see bug 588339, bug 597610) needed for sealing. Also see http://live.gnome.org/GTK%2B/3.0/PendingSealings for current status.)
Created attachment 160219 [details] [review] Fix libtomboy build with -DGSEAL_ENABLE
I've yet to test this with gtk+ >= 2.20. I'll try to get to it soon but if others get a chance first, do let me know.
Sandy: gtk_widget_get_window() in Gtk+ itself has been available since 2.14, so if I get it right no gtk+ 2.20 is needed at all here (don't know about gtk-sharp relation here though). So could this get in?
Andre, what I meant was that I've only tested with < 2.20. If I have missed some sealings, this would break the build for >= 2.20. I'm back to half days now so I should be able to find time to try this in a VM.