Fix libtomboy build with -DGSEAL_ENABLE

https://bugzilla.gnome.org/show_bug.cgi?id=616195